move jmh benchmarks to different repo